# lexi

./: .env  README.md  main.py  pyproject.toml
config/: chainlit_app.py  openai_sdk.py
core/: agent_state.py  functions.py
data/: history.json
