[project]
name = "lexi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.8.3",
    "duckduckgo-search>=8.1.1",
    "google-genai>=1.45.0",
    "google-generativeai>=0.8.5",
    "openai>=2.5.0",
    "openai-agents>=0.4.0",
    "python-dotenv>=1.1.1",
    "sympy>=1.14.0",
    "wikipedia>=1.4.0",
]
